[gd_scene load_steps=12 format=3 uid="uid://cqgwabavvp7ri"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_ky0mm"]
[ext_resource type="Texture2D" uid="uid://cjq6epj4b7jbv" path="res://sprites/player/char_a_p1_0bas_humn_v01.png" id="2_ruuhl"]
[ext_resource type="PackedScene" uid="uid://cwy1b0yhpd0r5" path="res://scenes/inventory/inventory_ui.tscn" id="3_vvwnk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3f0ld"]
atlas = ExtResource("2_ruuhl")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv252"]
atlas = ExtResource("2_ruuhl")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c81yl"]
atlas = ExtResource("2_ruuhl")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikk3w"]
atlas = ExtResource("2_ruuhl")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ih0i"]
atlas = ExtResource("2_ruuhl")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1skgu"]
atlas = ExtResource("2_ruuhl")
region = Rect2(320, 384, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ekfl6"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f0ld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv252")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c81yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikk3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ih0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1skgu")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pmyw7"]

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_ky0mm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ekfl6")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
rotation = 1.56801
scale = Vector2(0.683853, 0.683853)
shape = SubResource("CapsuleShape2D_pmyw7")

[node name="jump_buffer" type="Timer" parent="."]

[node name="coyote_jump_timer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="interact_ui" type="CanvasLayer" parent="."]
visible = false

[node name="pickable_label" type="Label" parent="interact_ui"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -50.5
offset_right = 71.5
offset_bottom = -27.5
grow_horizontal = 2
grow_vertical = 2
text = "Press 'E' to pick up"

[node name="inventory_ui" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="inventory_ui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="inventory_ui/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_right = 37.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Inventory
"

[node name="Inventory_UI" parent="inventory_ui/ColorRect" instance=ExtResource("3_vvwnk")]
layout_mode = 1
offset_left = 538.5
offset_right = 538.5
